# ETHFALCON

./: .gitignore  LICENSE.txt  README.md  ZKNOX_shake.sol  foundry.toml  makefile  run.sh
doc/: benchmarks.md  example.md  specification.md
falcon/: README.md  falcon.go  falcon.js  go.mod  makefile  test_falcon.go  test_falcon.js
geth/: README.md  contracts.go
hash/: makefile
hash/poseidon2_EF/: Cargo.toml
hash/poseidon2_EF/header/: poseidon2_wrapper.h
hash/poseidon2_EF/test/: test_poseidon2.c
hash/src/poseidon2_Plonky3/: Cargo.toml
hash/src/poseidon2_Plonky3/src/: lib.rs
hash/src/poseidon2_Plonky3/test/: makefile
python-ref/: README.md  bench_signature.py  common.py  consistency_test_vector_tetration.py  fake_shake.py  falcon.py  falcon_epervier.py  falcon_recovery.py  forgery.py  generate_delegate.py  generate_deprecated_falcon_epervier_test_vectors.py  generate_deprecated_falcon_recovery_test_vectors.py  generate_deprecated_falcon_test_vectors.py  generate_epervier_test_vectors.py  generate_ethfalcon_test_vectors.py  generate_experimental_falcon_epervier_shorter_zknox_test_vectors.py  generate_experimental_falcon_epervier_test_vectors.py  generate_experimental_falcon_recovery_shorter_zknox_test_vectors.py  generate_falcon_compact_test_vectors.py  generate_falcon_core_test_vectors.py  generate_falcon_epervier_shorter_zknox_test_vectors.py  generate_falcon_epervier_test_vectors.py  generate_falcon_epervier_tetration_test_vectors.py  generate_falcon_epervier_zknox_test_vectors.py  generate_falcon_recovery_shorter_zknox_test_vectors.py  keccak.py  (+26 more)
(+166 files in other folders)
